k8s/deck-curator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deck-curator-service
spec:
  selector:
    app: deck-curator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
