k8s/deck-curator-testing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deck-curator-testing-service
spec:
  selector:
    app: deck-curator-testing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
